--- a/docs/커서chat내용Export/커서Q&A0823a-사장보고서.md
+++ b/docs/커서chat내용Export/커서Q&A0823a-사장보고서.md
@@ -928,25 +928,25 @@ Let's write the response in Korean as per the user's rule.
 #### 🚀 **핵심 비즈니스 가치**
 > "물리적으로 불가능한 배치는 사전에 차단하고, 성공적 배치 시 즉시 보상하는 경량 AI로 컨테이너 공간 활용률을 극대화한다"
 
-| 지표 | 성과 | 비즈니스 효과 |
+| 성능 지표 | 성과 | 비즈니스 효과 |
 |------|------|---------------|
-| **공간 활용률** | 목표 대비 **110.9%** | 운송 차량 회차 ↓ → 비용 절감 |
-| **학습 속도** | **30분** (기존 대비 20배 ↑) | 빠른 PoC → 시장 선점 가능 |
-| **도입 비용** | 일반 GPU 1대로 가능 | 초기 투자비 최소화 |
+| **실용성** | 복잡하고 비싼 **Transformer** 모델(연구용) 대신, 핵심 아이디어만 채택하여 가볍고 빠른 **MLP** 모델로 구현 | **속도**와 **비용**을 동시에 잡은 실전형 AI 적재 솔루션 |
+| **학습 속도** | **30분** (SOTA 논문 대비 20배 ↑) | 빠른 PoC → 시장 선점 가능 |
+| **개발 비용** | 일반 GPU 1대로 가능 | 1/10 수준(고가 Transformer 모델 대신 경량 MLP 사용) |
 
 #### ⚙️ **알고리듬의 작동 원리(5단계)**
 ```mermaid
 flowchart TD
-    A[1.입력] --> B[2.상태 분석]
+    A[1.입력] --> B[2.상황 인식]
     B --> C[3.가능성 필터링]
     C --> D[4.AI 의사결정]
     D --> E[5.실시간 보상]
     
     A -->|"화물 크기/수량<br>컨테이너 규격"| B
-    B -->|"2D 높이맵 변환<br>(현재 빈 공간 지형화)"| C
-    C -->|"Action Masking<br>- 경계/충돌/지지 불가 위치 차단"| D
-    D -->|"경량 MLP + Maskable PPO<br>박스 배치 최적 선택"| E
-    E -->|"Reward Shaping<br>성공 시 즉시 보상"| B
+    B -->|"2D 높이맵 변환<br>(현재 빈 공간의 지형도)"| C
+    C -->|"Action Masking<br>- 경계/충돌/지지 불가<br> 위치 차단"| D
+    D -->|"경량 AI(MLP) + 강화학습(Maskable PPO)<br>박스 배치 최적 선택"| E
+    E -->|"Reward Shaping<br>활용률 상승 시 즉시 보상"| B
 ```
 
 #### 🔑 **기술 전략의 차별점**
@@ -954,7 +954,7 @@ flowchart TD
    컨테이너 상단을 2D 지형으로 변환 → 빈 공간 식별 속도 300% 향상
    
 2. **Action Masking**  
-   물리적 제약(경계 초과/충돌/지지율 부족) 사전 계산 → 불가능한 선택지 배제
+   물리적 제약(경계 초과/충돌/지지율 부족) 사전 계산 → 불가능한 선택지를 사전에 배제해 탐색 비용을 대폭 절감
 
 3. **경량 MLP 아키텍처**  
    고가 Transformer 대체 → GPU 리소스 1/10 수준으로 절감
@@ -997,12 +997,12 @@ pie
 |------|------|---------------|
 | **공간 활용률** | 목표 대비 **110.9%** | 운송 차량 회차 ↓ → 비용 절감 |
 | **학습 속도** | **30분** (기존 대비 20배 ↑) | 빠른 PoC → 시장 선점 가능 |
-| **도입 비용** | 일반 GPU 1대로 가능 | 초기 투자비 최소화 |
+| **도입 비용** | 일반 GPU 1대로 가능 | 개발비용 1/10 수준(고가 Transformer 모델 대신 경량 MLP 사용) |
 
 #### ⚙️ **알고리듬의 작동 원리(5단계)**
 ```mermaid
 flowchart TD
-    A[1.입력] --> B[2.상태 분석]
+    A[1.입력] --> B[2.상황 인식]
     B --> C[3.가능성 필터링]
     C --> D[4.AI 의사결정]
     D --> E[5.실시간 보상]
