사장보고 -> html, pdf

--- a/docs/커서chat내용Export/브리핑-사장보고.md
+++ b/docs/커서chat내용Export/브리핑-사장보고.md
@@ -1,7 +1,7 @@
 ### 3D 적재 최적화 AI 알고리듬 - 1페이지 브리핑(경영진용)
 
 #### 🚀 **핵심 비즈니스 가치**
-> "물리적으로 불가능한 배치는 사전에 차단하고, 성공적 배치 시 즉시 보상하는 경량 AI로 컨테이너 공간 활용률을 극대화한다"
+> "물리적으로 불가능한 배치는 사전에 차단하고, 성공적 배치 시 즉시 보상하는<br>경량 AI로 컨테이너 공간 활용률을 극대화한다"
 
 | 성능 지표 | 성과 | 비즈니스 효과 |
 |------|------|---------------|
@@ -9,10 +9,10 @@
 | **학습 속도** | **30분** (SOTA 논문 대비 20배 ↑) | 빠른 PoC → 시장 선점 가능 |
 | **개발 비용** | 일반 GPU 1대로 가능 | 1/10 수준(고가 Transformer 모델 대신 경량 MLP 사용) |
 
-![다이어그램](figULD.png =240x)
+<img src="figULD.png" style="float:right; width:300px; margin:0 0 15px 20px; border:1px solid #ddd; border-radius:4px;">
 
 #### ⚙️ **AI 알고리듬의 작동 원리(5단계)**
-```mermaid
+```mermaid  {align="center"}
 flowchart TD
     A[1.입력] --> B[2.상황 인식]
     B --> C[3.가능성 필터링]
@@ -30,16 +30,19 @@ flowchart TD
 1. **높이맵(Height Map)**  
    컨테이너 상단을 2D 지형으로 변환 → 빈 공간 식별 속도 300% 향상
    
-2. **Action Masking**  
+2. **액션 매스킹(Action Masking)**  
    물리적 제약(경계 초과/충돌/지지율 부족) 사전 계산 → 불가능한 선택지를 사전에 배제해 탐색 비용을 대폭 절감
 
 3. **경량 MLP 아키텍처**  
    고가 Transformer 대체 → GPU 리소스 1/10 수준으로 절감
 
-4. **Reward Shaping**  
+4. **보상 셰이핑(Reward Shaping)**  
    공간 활용률 상승마다 즉시 보상 → 학습 효율성 150% 개선
 
 #### 📈 **시스템 도입의 경영상 기대효과**
+
+<div style="width: 450px; margin: auto;">
+
 ```mermaid
 pie
     title 경영상 기대효과 (비율)
@@ -48,3 +51,4 @@ pie
     "실시간 모니터링" : 25
     "유지보수 용이성" : 10
 ```
+</div>
