--- a/docs/커서chat내용Export/브리핑-사장보고0.md
+++ b/docs/커서chat내용Export/브리핑-사장보고0.md
@@ -1,4 +1,4 @@
-### ULD 적재 최적화를 위한 강화학습 AI 알고리듬 - 1페이지 브리핑(경영진용)
+### 3D 적재 최적화 AI 알고리듬 - 1페이지 브리핑(경영진용)
 
 #### 🚀 **핵심 비즈니스 가치**
 > "물리적으로 불가능한 배치는 사전에 차단하고, 성공적 배치 시 즉시 보상하는<br>경량 AI로 컨테이너 공간 활용률을 극대화한다"
@@ -12,10 +12,7 @@
 <img src="figULD.png" style="float:right; width:300px; margin:0 0 15px 20px; border:1px solid #ddd; border-radius:4px;">
 
 #### ⚙️ **AI 알고리듬의 작동 원리(5단계)**
-
-<div style="display: flex; justify-content: right;">
-
-```mermaid
+```mermaid {align="center"}
 flowchart TD
     A[1.입력] --> B[2.상황 인식]
     B --> C[3.가능성 필터링]
@@ -29,15 +26,12 @@ flowchart TD
     E -->|"Reward Shaping<br>활용률 상승 시 즉시 보상"| B
 ```
 
-</div>
-
 #### 🔑 **기술 전략의 차별점**
 1. **높이맵(Height Map)**  
    컨테이너 상단을 2D 지형으로 변환 → 빈 공간 식별 속도 300% 향상
    
 2. **액션 매스킹(Action Masking)**  
-   물리적 제약(경계 초과/충돌/지지율 부족) 사전 계산 → 불가능한 선택지를
-   사전에 배제해 탐색 비용을 대폭 절감
+   물리적 제약(경계 초과/충돌/지지율 부족) 사전 계산 → 불가능한 선택지를 사전에 배제해 탐색 비용을 대폭 절감
 
 3. **경량 MLP 아키텍처**  
    고가 Transformer 대체 → GPU 리소스 1/10 수준으로 절감
